FIx Arrow alignment on Product slideshow

--- a/style.css
+++ b/style.css
@@ -1648,7 +1648,7 @@ p.comment-form-comment { margin: 0 }
     opacity: 1;
 }
 #ss .next {
-    left: 465px;
+    left: 475px;
     background: url(images/slideshow/arrow-right.png) no-repeat 100% 50%;
 }
 /*
